Convert contact page to mobile

--- a/craft/templates/contact.html
+++ b/craft/templates/contact.html
@@ -4,9 +4,9 @@
 {% cache globally using key craft.request.path %}
 
   {% for entry in craft.entries.section('pages').slug(craft.request.getSegment(1)) %}
-  <article class="page-content">
+  <article class="page-content standard-page">
     <div class="page-image">
-      <img src="{{ entry.pageImage.first().getUrl() }}" alt="">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58129.93243744846!2d11.370236447956291!3d43.78779223369125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132baad566a47839%3A0x37a833dd8b34d006!2sPoggio+La+Noce!5e0!3m2!1sen!2sus!4v1478811195558" width="900" height="450" frameborder="0" style="border:0" allowfullscreen=""></iframe>
     </div>
     <div class="page-text">
       <h1>{{ entry.pageSubtitle }}</h1>
@@ -28,25 +28,20 @@
           <input type="hidden" name="action" value="contactForm/sendMessage">
           <input type="hidden" name="redirect" value="contact/thanks">
 
-          <div class="form-left">
-
+          <div class="form_group">
             <h3><label for="fromName">{{ "Name" | translate }}</label></h3>
             <input id="fromName" type="text" name="fromName" value="{% if message is defined %}{{ message.fromName }}{% endif %}">
 
             <h3><label for="fromEmail">{{ "Email" | translate }}<span class="required">*</span></label></h3>
             <input id="fromEmail" type="text" name="fromEmail" value="{% if message is defined %}{{ message.fromEmail }}{% endif %}">
-
-            <input type="submit" value="Send">
-
           </div>
 
-          <div class="form-right">
-
+          <div class="message form_group">
             <h3><label for="message">{{ "Message" | translate }}<span class="required">*</span></label></h3>
             <textarea rows="10" cols="40" id="message" name="message">{% if message is defined %}{{ message.message }}{% endif %}</textarea>
-
           </div>
 
+          <input type="submit" value="Send">
 
           <input id="location" name="location" type="text">
 
