--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -680,9 +680,12 @@
       margin-top: 0
       text-align: left
     .award-title
-      font-size: 72px
+      font-size: 48px
       font-family: $handwriting
-      margin-bottom: 30px
+      margin-bottom: 20px
+      @include breakpoint($tablet)
+        font-size: 72px
+        margin-bottom: 30px
     li
       margin-bottom: 70px
       list-style-type: none
@@ -735,23 +738,31 @@
         ul
           padding: 0
       .badges
+        display: flex
+        flex-flow: row wrap
+        justify-content: center
+        @include breakpoint($tablet)
+          justify-content: flex-start
+          margin-left: -15px
         a
           text-decoration: none
           color: #fff
         li
           color: #fff
-          display: inline-block
           text-align: center
           line-height: 105px
           font-size: 20px
           font-family: $sans
           vertical-align: middle
           position: relative
-          margin-right: 45px
-          margin-bottom: 45px
+          margin: 0 15px 25px 15px
+          display: inline-block
           @include breakpoint($desktop)
             font-size: 24px
             line-height: 160px
+            margin: 0
+            margin-right: 45px
+            margin-bottom: 45px
           &:nth-child(3n)
             margin-right: 0
           .award-badge-body
@@ -776,7 +787,7 @@
             box-sizing: border-box
             bottom: 36px
             position: relative
-            padding: 0 5px
+            padding: 0 7px
             height: 32px
             margin-bottom: -32px
             line-height: 26px
