--- a/public/css/main.css
+++ b/public/css/main.css
@@ -520,6 +520,11 @@ img + .page-galleries {
 #content {
   position: relative;
 }
+@media only screen and (min-width: 1040px) {
+  #content {
+    overflow-x: hidden;
+  }
+}
 
 .container {
   margin: 0 20px;
@@ -1028,6 +1033,7 @@ main#content .container {
   #awards .awards-list li .right-image {
     margin-left: 75px;
     width: 270px;
+    text-align: center;
   }
 }
 #awards .awards-list li .right-image img {
@@ -1050,6 +1056,7 @@ main#content .container {
   }
 }
 #awards .awards-list li .right-image:before {
+  left: -53px;
   width: 345px;
   height: 400px;
   background-size: 348px auto;
